feat: jwt cors
