# docs/openapi.auth.json
@@ -1,231 +1,231 @@
-{
-  "openapi": "3.0.3",
-  "info": {
-    "title": "goGO Auth handlers",
-    "description": "goGo docs",
-    "version": "1.0.0"
-  },
-  "servers": [
-    {
-      "url": "http://localhost:8000/api/v1/auth"
-    }
-  ],
-  "paths": {
-    "/sign-in": {
-      "post": {
-        "summary": "Авторизация или регистрация",
-        "operationId": "auth",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/AuthRequestBody"
+  {
+    "openapi": "3.0.3",
+    "info": {
+      "title": "goGO Auth handlers",
+      "description": "goGo docs",
+      "version": "1.0.0"
+    },
+    "servers": [
+      {
+        "url": "http://localhost:8000/api/v1/auth"
+      }
+    ],
+    "paths": {
+      "/sign-in": {
+        "post": {
+          "summary": "Авторизация или регистрация",
+          "operationId": "auth",
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthRequestBody"
+                }
+              }
+            }
+          },
+          "responses": {
+            "400": {
+              "description": "Передан неверный silent_token VK ID",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/BadRequestError"
+                  }
+                }
+              }
+            },
+            "201": {
+              "description": "Ответ на запрос авторизации нового пользователя",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/AuthNeedRegistration"
+                  }
+                }
+              }
+            },
+            "200": {
+              "description": "Ответ на запрос авторизации",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Auth"
+                  }
+                }
               }
             }
           }
-        },
-        "responses": {
-          "400": {
-            "description": "Передан неверный silent_token VK ID",
+        }
+      },
+      "/sign-up": {
+        "post": {
+          "description": "Регистрация",
+          "requestBody": {
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BadRequestError"
+                  "$ref": "#/components/schemas/SignUpRequestBody"
                 }
               }
             }
           },
-          "201": {
-            "description": "Ответ на запрос авторизации нового пользователя",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AuthNeedRegistration"
+          "responses": {
+            "200": {
+              "description": "Пользователь успешно зарегистрирован",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Auth"
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Передан неверный silent_token VK ID",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/BadRequestError"
+                  }
                 }
               }
             }
-          },
-          "200": {
-            "description": "Ответ на запрос авторизации",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Auth"
+          }
+        }
+      },
+      "/token/refresh": {
+        "get": {
+          "description": "Обмен refresh токена на новую пару Access token Refresh Token",
+          "responses": {
+            "403": {
+              "description": "Неверный Refresh Token или он устарел"
+            },
+            "200": {
+              "description": "Успешный обмен",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Auth"
+                  }
                 }
               }
+            }
+          }
+        }
+      },
+      "/logout": {
+        "get": {
+          "description": "Удаление refresh токена из куки и инвалидация Access token",
+          "responses": {
+            "200": {
+              "description": "Токен удален"
             }
           }
         }
       }
     },
-    "/sign-up": {
-      "post": {
-        "description": "Регистрация",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/SignUpRequestBody"
-              }
+    "components": {
+      "responses": {
+        "Unauthorized": {
+          "description": "Передан неверный Access Token или он устарен"
+        }
+      },
+      "schemas": {
+        "AuthRequestBody": {
+          "type": "object",
+          "properties": {
+            "code": {
+              "type": "string",
+              "required": true
             }
           }
         },
-        "responses": {
-          "200": {
-            "description": "Пользователь успешно зарегистрирован",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Auth"
-                }
-              }
+        "SignUpRequestBody": {
+          "description": "New schema",
+          "type": "object",
+          "properties": {
+            "code": {
+              "type": "string"
+            },
+            "first_name": {
+              "type": "string"
+            },
+            "last_name": {
+              "type": "string"
+            },
+            "username": {
+              "type": "string"
             }
           },
-          "400": {
-            "description": "Передан неверный silent_token VK ID",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BadRequestError"
-                }
-              }
+          "required": [
+            "first_name",
+            "last_name",
+            "code",
+            "username"
+          ]
+        },
+        "BadRequestError": {
+          "description": "Некорректные параметры запроса",
+          "type": "object",
+          "properties": {
+            "error_text": {
+              "type": "string",
+              "required": true
             }
           }
-        }
-      }
-    },
-    "/token/refresh": {
-      "get": {
-        "description": "Обмен refresh токена на новую пару Access token Refresh Token",
-        "responses": {
-          "403": {
-            "description": "Неверный Refresh Token или он устарел"
-          },
-          "200": {
-            "description": "Успешный обмен",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Auth"
-                }
-              }
+        },
+        "Auth": {
+          "type": "object",
+          "properties": {
+            "action": {
+              "description": "Действие авторизации",
+              "type": "string",
+              "enum": [
+                "auth"
+              ]
+            },
+            "access_token": {
+              "description": "Токен доступа",
+              "type": "string"
             }
-          }
-        }
-      }
-    },
-    "/logout": {
-      "get": {
-        "description": "Удаление refresh токена из куки и инвалидация Access token",
-        "responses": {
-          "200": {
-            "description": "Токен удален"
-          }
-        }
-      }
-    }
-  },
-  "components": {
-    "responses": {
-      "Unauthorized": {
-        "description": "Передан неверный Access Token или он устарен"
-      }
-    },
-    "schemas": {
-      "AuthRequestBody": {
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "string",
-            "required": true
-          }
-        }
-      },
-      "SignUpRequestBody": {
-        "description": "New schema",
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "string"
           },
-          "first_name": {
-            "type": "string"
-          },
-          "last_name": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string"
-          }
+          "required": [
+            "action",
+            "access_token"
+          ]
         },
-        "required": [
-          "first_name",
-          "last_name",
-          "code",
-          "username"
-        ]
-      },
-      "BadRequestError": {
-        "description": "Некорректные параметры запроса",
-        "type": "object",
-        "properties": {
-          "error_text": {
-            "type": "string",
-            "required": true
-          }
+        "AuthNeedRegistration": {
+          "type": "object",
+          "properties": {
+            "action": {
+              "description": "Действие регистрации",
+              "type": "string",
+              "enum": [
+                "register"
+              ]
+            },
+            "email": {
+              "description": "Электронная почта пользователя",
+              "type": "string",
+              "format": "email"
+            },
+            "first_name": {
+              "description": "Имя пользователя",
+              "type": "string"
+            },
+            "last_name": {
+              "description": "Фамилия пользователя",
+              "type": "string"
+            }
+          },
+          "required": [
+            "action",
+            "first_name",
+            "last_name",
+            "email"
+          ]
         }
-      },
-      "Auth": {
-        "type": "object",
-        "properties": {
-          "action": {
-            "description": "Действие авторизации",
-            "type": "string",
-            "enum": [
-              "auth"
-            ]
-          },
-          "access_token": {
-            "description": "Токен доступа",
-            "type": "string"
-          }
-        },
-        "required": [
-          "action",
-          "access_token"
-        ]
-      },
-      "AuthNeedRegistration": {
-        "type": "object",
-        "properties": {
-          "action": {
-            "description": "Действие регистрации",
-            "type": "string",
-            "enum": [
-              "register"
-            ]
-          },
-          "email": {
-            "description": "Электронная почта пользователя",
-            "type": "string",
-            "format": "email"
-          },
-          "first_name": {
-            "description": "Имя пользователя",
-            "type": "string"
-          },
-          "last_name": {
-            "description": "Фамилия пользователя",
-            "type": "string"
-          }
-        },
-        "required": [
-          "action",
-          "first_name",
-          "last_name",
-          "email"
-        ]
       }
     }
   }
-}
